bing directive on event

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,6 +1,6 @@
 <form action="" class="search-form">
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="Enter you username" name="username" [(ngModel)]="username" (keyup)="findProfile()">
+    <input appHighlight type="text" class="form-control" placeholder="Enter you username" name="username" [(ngModel)]="username" (keyup)="findProfile()">
   </div>
 </form>
 
