--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,8 @@
 <div class="jumbotron">
-  <h1 class="display-4 text-center">About Goals App</h1>
+  <h1 class="display-4 text-center">WELCOME TO GITPROJECTS </h1>
   <hr class="my-4">
-  <p class="lead text-center">An Angular app that let's you create your goals and gives you quotes from the world of computing!</p>
+  <p class="lead text-center">An Angular app that let's github repositories as well as the profile of a github user!</p>
+</div>
+<div class="container-fluid" id="gitimg">
+  <img src="https://github.githubassets.com/images/modules/open_graph/github-octocat.png">
 </div>
